styles and background

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <ul id="keys">
+        <ul class="keys">
             <li data-key="65" class="key">
                 <kbd>A</kbd>
                 <span class="sound">clap</span>
@@ -57,5 +57,7 @@
                 <audio data-key="76" src="sounds/tink.wav"></audio>
               </section>
         </ul>
+
+        
     </body>
 </html>
