--- a/index.html
+++ b/index.html
@@ -58,6 +58,25 @@
               </section>
         </ul>
 
-        
+        <script type="text/javascript">
+            function removeTransision(e) {
+                if (e.propertyName !== 'transform') return;
+                this.classList.remove('playing');
+            }
+
+            function playSound(e) {
+                const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+                const key = document.querySelector(`li[data-key="${e.keyCode}"]`);
+                if (!audio) return;
+
+                key.classList.add('playing');
+                audio.currentTime = 0;
+                audio.play();
+            }
+
+            const keys = Array.from(document.querySelectorAll('.key'));
+            keys.forEach(key => key.addEventListener('transitionend', removeTransision));
+            window.addEventListener('keydown', playSound);
+        </script>
     </body>
 </html>
